kubernetes/shorturl.yaml
apiVersion: v1
kind: Service
metadata:
  name: shorturl
  labels:
    app: shorturl
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: shorturl
    tier: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: shorturl-redis
  labels:
    app: shorturl
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: shorturl
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorturl
  labels:
    app: shorturl
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shorturl
      tier: frontend
  template:
    metadata:
      labels:
        app: shorturl
        tier: frontend
    spec:
      containers:
        - image: ffe4/fcc-shorturl
          name: shorturl-app
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          volumeMounts:
          - name: flask-config
            mountPath: /etc/config
      volumes:
      - name: flask-config
        configMap:
          name: flask-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorturl-redis
  labels:
    app: shorturl
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shorturl
      tier: backend
  template:
    metadata:
      labels:
        app: shorturl
        tier: backend
    spec:
      containers:
        - image: redis
          name: redis
          imagePullPolicy: Always
          args: ["--requirepass", "$(REDIS_PASSWORD)", "--bind", "0.0.0.0"]
          ports:
            - containerPort: 6379
