kubernetes/upfile.yaml
apiVersion: v1
kind: Service
metadata:
  name: upfile
  labels:
    app: upfile
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: upfile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upfile
  labels:
    app: upfile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: upfile
  template:
    metadata:
      labels:
        app: upfile
    spec:
      containers:
        - image: ffe4/fcc-upfile
          name: upfile-app
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
