kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fcc-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/timestamp(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: timestamp
              servicePort: 80
          - path: /api/whoami(/|$)
            pathType: Exact
            backend:
              serviceName: whoami
              servicePort: 80
          - path: /api/shorturl/()(.*)
            pathType: Prefix
            backend:
              serviceName: shorturl
              servicePort: 80
          - path: /api/exercise/()(.*)
            pathType: Prefix
            backend:
              serviceName: exercise
              servicePort: 80
          - path: /api/upfile(/|$)
            pathType: Exact
            backend:
              serviceName: upfile
              servicePort: 80
          - path: /()(.*)
            pathType: Prefix
            backend:
              serviceName: nginx-static
              servicePort: 80
